# aware-sdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
environments/: CHANGELOG.md  README.md  pyproject.toml
environments/aware_environments/: __init__.py
environments/aware_environments/kernel/: README.md  __init__.py  registry.py
environments/aware_environments/kernel/_shared/: receipts.py
environments/aware_environments/kernel/agents/: __init__.py  aware_manager.py  desktop_manager.py
environments/aware_environments/kernel/objects/: __init__.py
environments/aware_environments/kernel/objects/_shared/: __init__.py  frontmatter.py  fs_utils.py  patch.py  runtime_models.py  timeline.py
environments/aware_environments/kernel/objects/agent/: __init__.py  adapter.py  handlers.py  helpers.py  spec.py
environments/aware_environments/kernel/objects/agent_thread/: __init__.py  handlers.py  schemas.py  session_ops.py  spec.py  write_plan.py
environments/aware_environments/kernel/objects/agent_thread_memory/: __init__.py  adapter.py  handlers.py  models.py  spec.py  write_plan.py
environments/aware_environments/kernel/objects/conversation/: handlers.py  schemas.py  spec.py  write_plan.py
environments/aware_environments/kernel/objects/environment/: __init__.py  guide_builder.py  handlers.py  schemas.py  spec.py
environments/aware_environments/kernel/objects/process/: __init__.py  fs.py  handlers.py  schemas.py  spec.py
environments/aware_environments/kernel/objects/project/: __init__.py  handlers.py  schemas.py  spec.py  utils.py  write_plan.py
environments/aware_environments/kernel/objects/release/: __init__.py  handlers.py  models.py  spec.py  write_plan.py
environments/aware_environments/kernel/protocols/: __init__.py
environments/aware_environments/kernel/roles/: __init__.py  memory_baseline.py  project_task_baseline.py  thread_orchestration.py
environments/aware_environments/kernel/rules/: __init__.py
environments/aware_environments/kernel/samples/: __init__.py
environments/docs/: object_best_practices.md  protocol.md
environments/tests/: __init__.py  test_agent.py  test_agent_thread.py  test_agent_thread_handlers.py  test_agent_thread_memory.py  test_conversation_handlers.py  test_environment_handlers.py  test_patch_helpers.py  test_process_handlers.py  test_project.py  test_project_handlers.py  test_release.py  test_repository.py  test_repository_handlers.py  test_role.py  test_rule_handlers.py  test_runtime.py  test_task_handlers.py  test_terminal_handlers.py  test_thread_handlers.py
libs/environment/: CHANGELOG.md  README.md  pyproject.toml
libs/environment/tests/: test_command_renderer.py  test_kernel_objects.py  test_operation_plan.py  test_pathspec.py  test_renderer.py  test_runtime_executor.py  test_samples_integration.py  test_summary.py
libs/environment/tests/samples/: README.md
libs/file_system/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
libs/file_system/aware_file_system/: __init__.py  config.py  models.py
libs/file_system/aware_file_system/change_tracking/: detector.py  diff_calculator.py  manager.py
libs/file_system/aware_file_system/coordination/: coordinator.py  events.py
libs/file_system/aware_file_system/index/: file_system_index.py
libs/file_system/aware_file_system/watcher/: file_system_watcher.py
libs/file_system/tests/: test_file_system_watcher.py  test_single.py  test_watcher_simple.py
libs/providers/terminal/: CHANGELOG.md  README.md  pyproject.toml
libs/providers/terminal/docs/: overview.md
libs/providers/terminal/scripts/: update_provider_versions.py
libs/providers/terminal/tests/: test_registry.py
tools/release/: CHANGELOG.md  README.md  pyproject.toml
tools/release-pipeline/: CHANGELOG.md  README.md  pyproject.toml
tools/release-pipeline/aware_release_pipeline/: __init__.py  cli.py  models.py  pipeline.py  pipelines.py  versioning.py
tools/release-pipeline/aware_release_pipeline/workflows/: __init__.py  registry.py
tools/release-pipeline/docs/: 2025-10-25T00-03-56Z-release-pipeline-overview.md
tools/release-pipeline/tests/: test_pipeline.py  test_versioning.py
tools/release/aware_release/: __init__.py  secrets.py
tools/release/aware_release/bundle/: __init__.py  builder.py  dependencies.py  locks.py  manifest.py  provider.py  utils.py
tools/release/aware_release/cli/: __init__.py  release.py
tools/release/aware_release/integrations/: __init__.py  kernel.py  studio.py
tools/release/aware_release/publish/: __init__.py  adapters.py  index.py  models.py  publish.py
tools/release/aware_release/schemas/: __init__.py  release.py
tools/release/aware_release/workflows/: __init__.py
tools/release/docs/: 2025-10-24T18-07-31Z-aware-release-overview.md
tools/release/tests/: __init__.py  test_adapters.py  test_bundle_builder.py  test_cli_release.py  test_locks.py  test_manifest_schema.py  test_provider_packaging.py  test_publish.py  test_secrets.py  test_workflows.py
tools/release/tests/fixtures/: sample_manifest.json
tools/terminal/: CHANGELOG.md  README.md  RELEASE.md  _ci_update_provider_versions.py  pyproject.toml
tools/terminal/assets/gnome/: manifest.json
tools/terminal/docs/: TERMINAL_SELECTION.md
tools/terminal/tests/: conftest.py  test_binding_store.py  test_cli_daemon_commands.py  test_cli_daemon_server.py  test_cli_provider.py  test_daemon_client.py  test_daemon_models.py  test_daemon_session_manager.py  test_daemon_streaming.py  test_generate_mock_data.py  test_gnome_window_manager.py  test_manifest_helper.py  test_mock_provider.py  test_remediation_providers.py  test_remediation_state.py  test_session_receipts.py  test_view_model.py
tools/test-runner/: CHANGELOG.md  README.md  pyproject.toml
tools/test-runner/aware_test_runner/: __init__.py
tools/test-runner/aware_test_runner/config/: __init__.py
tools/test-runner/aware_test_runner/utils/: helpers.py
tools/test-runner/configs/: internal.json  oss.json
tools/test-runner/docs/: internal-runbook.md
tools/test-runner/tests/: test_discovery_rules.py  test_placeholder.py
(+57 files in other folders)
