[project]
name = "aware-environments"
version = "0.1.1"
description = "Implementation environments for Aware (kernel roles/rules/objects)."
authors = [{ name = "Aware Team" }]
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"
dependencies = [
  "aware-environment",
  "pyyaml>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
test = []
