[project]
name = "aware-release-pipeline"
version = "0.1.0"
description = "Internal orchestration layer for aware-release CLI automation (bundle + publish)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aware-release",
  "requests>=2.31.0,<3.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
release-pipeline = "aware_release_pipeline.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_release_pipeline"]
