[project]
name = "aware-release"
version = "0.1.2"
description = "Shared release tooling for aware-cli bundles and companion automation."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "AWARE Team" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]
keywords = ["aware", "release", "bundle", "automation"]

dependencies = [
  "pydantic>=2.8.0,<3.0.0",
  "typing-extensions>=4.10.0,<5.0.0",
  "requests>=2.31.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/aware-network/aware-sdk"
Repository = "https://github.com/aware-network/aware-sdk/tree/main/tools/release"
Documentation = "https://github.com/aware-network/aware-sdk/tree/main/tools/release/docs"
Changelog = "https://github.com/aware-network/aware-sdk/tree/main/tools/release/CHANGELOG.md"

[project.scripts]
aware-release = "aware_release.cli.release:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_release"]
include = [
  "README.md",
  "LICENSE",
]

[tool.hatch.metadata]
allow-direct-references = true
