[project]
name = "aware-terminal"
version = "0.3.3"
description = "AWARE Terminal Manager: Persistent tmux + GNOME workspace automation"
authors = [
  { name = "AWARE Team" },
]
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "click>=8.0.0,<9.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "pyyaml>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.7,<0.24.0",
  "pytest-mock>=3.12.0,<4.0.0",
]

[project.scripts]
aware-terminal = "aware_terminal.cli:cli"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aware_terminal"]
include = [
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
]
