[project]
name = "aware-test-runner"
version = "0.2.0"
description = "Unified test runner for the Aware platform with OSS-ready packaging."
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Aware Team" }
]
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Testing",
]
keywords = ["aware", "testing", "automation", "manifests", "ci"]
dependencies = ["pytest>=8.2"]

[project.optional-dependencies]
internal = []
docs = ["mkdocs>=1.6"]
tests = ["pytest>=8.2"]

[project.urls]
Homepage = "https://pypi.org/project/aware-test-runner/"
Documentation = "https://github.com/aware-network/aware-sdk/tree/main/tools/test-runner/README.md"
Changelog = "https://github.com/aware-network/aware-sdk/tree/main/tools/test-runner/CHANGELOG.md"
Source = "https://github.com/aware-network/aware-sdk"
Issues = "https://github.com/aware-network/aware-sdk/issues"

[project.scripts]
aware-tests = "aware_test_runner.cli:main"
aware-test = "aware_test_runner.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["aware_test_runner", "aware_tests"]

[tool.hatch.version]
path = "aware_test_runner/__init__.py"
